force-app/main/default/objects/Hero_Component_Detail__c/Hero_Component_Detail__c.object-meta.xml
<CustomObject>
    <label>Hero Component Detail</label>
    <nameField>
        <label>Hero Component Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hero Component Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>