force-app/main/default/objects/Hero_Component_Detail__c/fields/Button_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>Button_Background_Color__c</fullName>
    <label>Button Background Color</label>
    <length>180</length>
    <type>Text</type>
</CustomField>