force-app/main/default/objects/Hero_Component_Detail__c/fields/Button_Link_1__c.field-meta.xml
<CustomField>
    <fullName>Button_Link_1__c</fullName>
    <label>Button Link 1</label>
    <required>true</required>
    <type>Url</type>
</CustomField>