force-app/main/default/objects/Hero_Component_Detail__c/fields/Button_Link_3__c.field-meta.xml
<CustomField>
    <fullName>Button_Link_3__c</fullName>
    <label>Button Link 3</label>
    <type>Url</type>
</CustomField>