force-app/main/default/objects/Hero_Component_Detail__c/fields/Button_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Button_Name_1__c</fullName>
    <label>Button Name 1</label>
    <length>180</length>
    <required>true</required>
    <type>Text</type>
</CustomField>