force-app/main/default/objects/Hero_Component_Detail__c/fields/Button_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Button_Name_2__c</fullName>
    <label>Button Name 2</label>
    <length>180</length>
    <type>Text</type>
</CustomField>