force-app/main/default/objects/Hero_Component_Detail__c/fields/Button_Name_3__c.field-meta.xml
<CustomField>
    <fullName>Button_Name_3__c</fullName>
    <label>Button Name 3</label>
    <length>180</length>
    <type>Text</type>
</CustomField>