force-app/main/default/objects/Hero_Component_Detail__c/fields/Button_Text_Size__c.field-meta.xml
<CustomField>
    <fullName>Button_Text_Size__c</fullName>
    <label>Button Text Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>