force-app/main/default/objects/Hero_Component_Detail__c/fields/Header_Color__c.field-meta.xml
<CustomField>
    <fullName>Header_Color__c</fullName>
    <label>Header Color</label>
    <length>180</length>
    <type>Text</type>
</CustomField>