force-app/main/default/objects/Hero_Component_Detail__c/fields/Header_Size__c.field-meta.xml
<CustomField>
    <fullName>Header_Size__c</fullName>
    <label>Header Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>