force-app/main/default/objects/Hero_Component_Detail__c/fields/Inside_Hero_Component__c.field-meta.xml
<CustomField>
    <fullName>Inside_Hero_Component__c</fullName>
    <label>Inside Hero Component</label>
    <referenceTo>Hero_Component__c</referenceTo>
    <relationshipLabel>Hero Component Details</relationshipLabel>
    <relationshipName>Hero_Component_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>