force-app/main/default/objects/Hero_Component_Detail__c/fields/Panel_Ordering__c.field-meta.xml
<CustomField>
    <fullName>Panel_Ordering__c</fullName>
    <label>Panel Ordering</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>