force-app/main/default/objects/Hero_Component_Detail__c/fields/SLDS_Left_Column_Size__c.field-meta.xml
<CustomField>
    <fullName>SLDS_Left_Column_Size__c</fullName>
    <description>Enter a value from 0 to 11 to split the hero component into. For example: Putting 5 will result in the left side being 5-of-12 and the right side being 7-of-12.</description>
    <label>SLDS Left Column Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>