force-app/main/default/objects/Hero_Component_Detail__c/fields/Sub_Header_Color__c.field-meta.xml
<CustomField>
    <fullName>Sub_Header_Color__c</fullName>
    <label>Sub Header Color</label>
    <length>180</length>
    <type>Text</type>
</CustomField>