force-app/main/default/objects/Hero_Component_Detail__c/fields/Sub_Header_Size__c.field-meta.xml
<CustomField>
    <fullName>Sub_Header_Size__c</fullName>
    <label>Sub Header Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>